--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
           
         </div>
       </div>
+      <div class="page3">
+        <div class="pg3-wraper">
+          <h1>HEALTHY MIND, HEALTHY BODY</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
+          <button>READ MORE</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
