--- a/index.html
+++ b/index.html
@@ -95,6 +95,41 @@
           <button>READ MORE</button>
         </div>
       </div>
+      <div class="page4">
+        <div class="pg4-wraper">
+          <h1>OUR GYM TRAINERS</h1>
+          <div class="pg4-cont-wraper">
+            <div class="pg4-cont">
+              <h3>Smirth Jon</h3>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6fiMWI88XUvjurhxzM143DPG1hgpXmwt8mg&s" alt="" srcset="">
+            </div>
+            <div class="pg4-cont">
+              <h3>Jean Doe</h3>
+              <img src="https://img.freepik.com/free-photo/young-adult-doing-indoor-sport-gym_23-2149205542.jpg?size=626&ext=jpg&ga=GA1.1.1224184972.1711929600&semt=ais" alt="">
+            </div>
+            <div class="pg4-cont">
+              <h3>Alex Den</h3>
+              <img src="https://thumbs.dreamstime.com/b/female-gym-instructor-24614762.jpg" alt="">
+            </div>
+          </div>
+         
+        </div>
+      </div>
+      <div class="page5">
+        <div class="pg5-left">
+            <img src="https://img.freepik.com/free-photo/dumbbells-floor-gym-ai-generative_123827-23743.jpg?size=626&ext=jpg&ga=GA1.1.2008272138.1720656000&semt=ais_user" alt="">
+        </div>
+        <div class="pg5-right">
+            <h1>contact us</h1>
+            <div class="input">
+              <input type="text" placeholder="Name">
+              <input type="email" placeholder="Email">
+              <input type="number" placeholder="Phone number">
+              <textarea name="Message" id="" cols="30" rows="5" placeholder="Message"></textarea>
+              <button>Send</button>
+            </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
