page 5 and footer added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="pg3-wraper">
           <h1>HEALTHY MIND, HEALTHY BODY</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-          <button>READ MORE</button>
+          <button class="btn">READ MORE</button>
         </div>
       </div>
       <div class="page4">
@@ -121,15 +121,36 @@
         </div>
         <div class="pg5-right">
             <h1>contact us</h1>
-            <div class="input">
-              <input type="text" placeholder="Name">
-              <input type="email" placeholder="Email">
-              <input type="number" placeholder="Phone number">
-              <textarea name="Message" id="" cols="30" rows="5" placeholder="Message"></textarea>
-              <button>Send</button>
+            <div class="input-box">
+              <input class="input" type="text" placeholder="Name">
+              <input  class="input" type="email" placeholder="Email">
+              <input  class="input" type="number" placeholder="Phone number">
+              <textarea class="input"  name="Message" id="" cols="30" rows="5" placeholder="Message"></textarea>
+              <button class="btn">Send</button>
             </div>
         </div>
       </div>
+      <footer>
+        <div class="ftr-up">
+          <div class="location ftr">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Lorem ipsum dolor sit amet, conLorem ipsum dolor sit amet</p>
+          </div>
+          <div class="phone ftr">
+            <i class="fa-solid fa-phone"></i>
+            <p>+01234567890</p>
+            <p>+01234567890</p>
+          </div>
+          <div class="mail ftr">
+            <i class="fa-solid fa-envelope"></i>
+            <p>demomail@mail.com</p>
+          </div>
+        </div>
+        <div class="ftr-down">
+          <i class="fa-regular fa-copyright"></i>
+          <p> 2045 All rights reserved by the original owner</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
